title looks good trying to fix div shift on click of enter with survey2.html

--- a/styles/main.css
+++ b/styles/main.css
@@ -62,7 +62,7 @@ h1 {
 }
 
 .formbody2 {
-	width:650px;
+	width:800px;
 	padding:.5em;
 	font-family:verdana, sans-serif;
 	color:#666;
@@ -118,6 +118,10 @@ div#surveys {
 	left: 29%
 }
 
+div#surveys2 {
+	width: 800px;
+	position:relative;
+} 
 .title {
 	font-family:verdana, sans-serif;
 	font-size: 5em;
@@ -193,10 +197,9 @@ div#floater {
 
 div#floater2 {
     background-color: #FFFFFF;
-    bottom: 82px;
+    bottom: 73px;
     height: 74px;
-    margin-bottom: 70px;
-    margin-left: auto;
+    margin-left: 200px;
     margin-right: auto;
     position: relative;
     width: 500px;
